++++
News
++++

.. contents:: Contents:
   :backlinks: none

.. _start:

SQLObject (trunk)
=================

SQLObject 1.0.0
===============

Features & Interface
--------------------

* Major API change: DB URI parser was changed to use urllib.split*() and
  unquote(). This means any username/password/path are allowed in DB
  URIs if they are properly %-encoded, and DB URIs are automatically
  unquoted.

* A new module ``__version__.py`` was added. New variables ``version``
  (string) and ``version_info`` (5-tuple: major, minor, micro, release
  level, serial) are imported into ``sqlobject`` namespace.

* In SQLite, id columns are made AUTOINCREMENT.

* Parameter ``backend`` in DB URI is no longer supported, use parameter
  ``driver``.

SQLObject 0.15.1
================

Released 22 Mar 2011.

* A bug was fixed in MSSQLConnection.

* A minor bug was fixed in sqlbuilder.Union.

SQLObject 0.15.0
================

Released 6 Dec 2010.

Features & Interface
--------------------

* Major API change: all signals are sent with the instance (or the class)
  as the first parameter. The following signals were changed:
  RowCreateSignal, RowCreatedSignal, DeleteColumnSignal.

* Major API change: post-processing functions for all signals are called
  with the instance as the first parameter. The following signals were
  changed: RowUpdatedSignal, RowDestroySignal, RowDestroyedSignal.

SQLObject 0.14.2
================

* A minor bug was fixed in sqlbuilder.Union.

SQLObject 0.14.1
================

Released 15 Oct 2010.

* A bugfix was ported from `SQLObject 0.13.1`_.

SQLObject 0.14.0
================

Released 10 Oct 2010.

Features & Interface
--------------------

* The lists of columns/indices/joins are now sorted according to the order
  of declaration.

* ``validator2`` was added to all columns; it is inserted at the beginning
  of the list of validators, i.e. its ``from_python()`` method is called